static/css/style.css
@font-face {
	font-family: Genty Sans;
	src: url('/fonts/genty-sans-regular.woff');
}

@font-face {
	font-family: Genty;
	src: url('/fonts/GentyDemo-Regular.otf');
}

:root {
	font-family: 'Genty Sans';
	--color-blue: #51ABB2;
	--color-orange: #E16539;
	--color-beige: #F0DFC8;
	--color-black: #333232;
	--color-white: #f8f6f2;
	--scroll-speed: 0.8s;
}

* {
	box-sizing: border-box;
}

body,
html {
	margin: 0;
	padding: 0;
	background-color: var(--color-white);
	max-width: 100vw;
}

header {
	position: absolute;
	z-index: 1;
	top: 0;
	color: var(--color-black);
	height: 10em;
}

header .wave-wrapper {
	z-index: 20;
}

header a {
	text-decoration: none;
	color: inherit;
}

header a img {
	visibility: hidden;
}

.header-content {
	display: flex;
	align-items: flex-start;
	margin: 0 10px;
	z-index: 30;
	position: absolute;
	top: 35px;
	width: 95vw;
	height: 0;
}

.hamburger-placeholder {
	width: 70px;
	height: 70px;
}

.logo {
	width: 15vw;
	max-width: 300px;
	margin-left: 2vw;
	transition: transform 1s ease-in-out;
}

main {
	max-width: 90vw;
	/* margin: 0 auto; */
	margin-top: 6em;
}

header h1 {
	font-size: 4rem;
	font-family: Genty;
	text-align: center;
	letter-spacing: 2px;
	text-shadow:
		-0.1rem -0.1rem 0 var(--color-beige),
		0.1rem -0.1rem 0 var(--color-beige),
		-0.1rem 0.1rem 0 var(--color-beige),
		0.1rem 0.1rem 0 var(--color-beige);
	margin: 0;
}

header p {
	font-size: 1.5rem;
	margin: 0;
}

.wave-wrapper {
	transform: rotate(180deg);
	position: relative;
}

footer .wave-wrapper {
	transform: rotateY(180deg);
}


#waves {
	display: block;
	width: 100vw;
	/* TODO: change depending on device? */
	position: relative;
	transform: rotate(180deg);
	height: 17em;
	max-height: 150px;
}

.med-button {
	/* margin: 40px auto; */
	width: 300px;
	max-width: min(600px, 90vw);
	text-align: center;
	background-color: var(--color-orange);
	height: 2.5em;
	/* font-size: 1.5em; */

	display: flex;
	justify-content: center;
	align-items: center;

	border-radius: 40px;
}

.big-button {
	margin: 40px auto;
	max-width: min(600px, 90vw);
	text-align: center;
	background-color: var(--color-orange);
	height: 3.5em;
	font-size: 1.5em;

	display: flex;
	justify-content: center;
	align-items: center;

	border-radius: 40px;
}

.med-button a,
.big-button a {
	color: var(--color-white);
	text-decoration: none;
	text-transform: uppercase;
}

#tagline {
	margin: 0 auto;
	text-align: center;
	margin-top: 2em;
	font-size: min(2.5vw, 24px);
	background-color: var(--color-white);
}

@media (max-width:480px) {
	header h1 {
		font-size: 2em;
	}

	#tagline {
		font-size: 1em;
	}

	#big-button {
		width: 95vw;
		font-size: 1em;
		padding: 0 5px;
	}
}


nav {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	z-index: 20;
	background-color: var(--color-black);
	flex-direction: column;
	justify-content: center;
	align-items: center;
	color: var(--color-white);
	max-height: 0;
	transition: max-height .7s ease, padding .7s ease;
	overflow: hidden;
}

nav.active {
	max-height: 1000px;
}

nav ol {
	padding-top: 4em;
	padding-bottom: 1em;
	padding-left: 0;
}

nav li {
	list-style: none;
	text-align: center;
	padding: .6em;

}

nav li.current {
	color: var(--color-orange);
}

nav li:hover {
	color: var(--color-beige);
}

nav li a {
	text-decoration: none;
	color: inherit;
}

@media (min-width: 600px) {
	.header-content {
		justify-content: space-between;
	}

	.header-content h1 {
		font-size: 4em;
	}

	nav.menu ol {
		border: none;
		width: 100%;
		display: flex;
		padding-left: 15em;

	}

	nav.menu ol li {
		padding: 0;
		margin: 0;
		flex: 1;
		text-align: center;

		&:not(:last-child) {
			border-right: 2px solid var(--color-white);
		}
	}
}


h1.theme {
	color: var(--color-white);
	text-shadow:
		-1px -1px 0 var(--color-orange),
		1px -1px 0 var(--color-orange),
		-1px 1px 0 var(--color-orange),
		1px 1px 0 var(--color-orange);
	font-size: 7em;
	font-family: Genty;
	margin: 0;
	letter-spacing: 5px;
	font-stretch: 200;
}

section {
	padding: 1rem;
	box-sizing: border-box;
}

@media (min-width: 1000px) {
	/* main { */
	/* 	padding-left: 15rem; */
	/* } */

	section>p {
		max-width: 50vw;
	}
}

.left {
	width: 15vw;
}

.center {
	width: 60vw;
}

.right {
	width: 15vw;
}


@media (min-width: 480px) and (max-width:1000px) {
	#header-title h1 {
		font-size: 3em;
	}
}

.scroller-container {
	overflow: hidden;
	width: 100%;
	display: flex;
	align-items: center;
}

.scroller-track {
	display: flex;
	animation: scroll 40s linear infinite;
}

.scroller-track img {
	height: 300px;
	margin-right: 5px;
}
.scroller-track video {
	height: 300px;
	margin-right: 5px;
}

@keyframes scroll {
	from {
		transform: translateX(0);
	}

	to {
		transform: translateX(-50%);
	}
}

em {
	color: var(--color-orange);
	font-style: normal;
}

main ul {
	line-height: 2;
}

label {
	display: block;
}

label:has(+ :is(input, textarea, select)[required])::after {
	content: "*";
	color: var(--color-orange);
}

input[type="text"],
textarea,
input[type="submit"],
input[type="tel"],
input[type="email"] {
	padding: 6px 12px;
	font-size: 14px;
	min-width: 30ch;
	line-height: 1.42857143;
	border: 1px solid #ccc;
	border-radius: 4px;
	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
	-webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
	-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
}

input:focus,
textarea:focus {
	border-color: var(--color-blue);
	outline: 0;
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px var(--color-blue);
}


button {
	padding: 10px 15px;
	border: none;
	display: flex;
	align-items: center;
	gap: 5px;
	background-color: var(--color-beige);
	font-family: 'Genty Sans';
	border-radius: 6px;

	&:hover {
		filter: brightness(1.05);
		cursor: pointer;
	}
}


#progress-bar {
	position: absolute;
	bottom: 0;
	height: 2vh;
	max-height: 20px;
	background-color: var(--color-orange);
	z-index: 20;
}

#page {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
}

#page main {
	flex: 1;
}

footer {
	padding-top: 1rem;
}

#footerinfo {
	padding: 40px;
	background-color: var(--color-black);
	color: var(--color-white);
	font-size: 0.9em;
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
	line-height: 1.4em;
	flex-wrap: wrap;
	gap: 1em;
}

#footerinfo > * {
	width: fit-content;
	flex: 1 1 200px;
}


@media (max-width: 450px) {
	#footerinfo div {
		text-align: center;
		margin-top: 2em;
	}
}

#footerinfo ul {
	margin: 0;
	padding: 0;
}

#footerinfo li {
	margin: 0;
	list-style: none;
}

#footerinfo a {
	/* text-decoration: none; */
	color: inherit;
}


.thanksbox {
	margin-top: 5em;
	height: 100%;
	display: flex;
	flex: 1;
	justify-content: center;
	align-items: flex-start;
	gap: 2rem;
}

.thanksbox .fake-left {
	flex: 0 0 100px;
}

.thanksbox main {
	flex: 0 1 60ch;
	margin-top: 6em;
	max-width: 90vw;
}

.thanksbox aside {
	flex: 0 0 300px;
	margin-top: 9em;
	margin-right: 8vw;
}

.thanksbox aside * {
	max-width: 100%;
}

@media (max-width: 768px) {
	.thanksbox {
		flex-direction: column;
		align-items: center;
	}
	.thanksbox .fake-left {
		display: none;
	}
	.thanksbox aside {
		width: 90vw;
		margin-top: 2rem;
		margin-right: 0;
	}
	.thanksbox aside video {
		max-height: 600px;
	}
}

footer a:hover {
	color: var(--color-beige) !important;
}


main:has(> section:nth-child(2)) {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start; /* prevents sections from stretching to equal height */
	column-gap: 2rem;
}

main:has(> section:nth-child(2)) > section {
	padding-top: 5em;
  flex: 1 1 400px; /* 300px is a bit narrow for a spotify embed */
  min-width: 0;    /* prevents iframe from blowing out the flex container */
	height: 100%;
}
main:has(> section:nth-child(2)) > section:first-child {
	align-self: flex-end;
}
main:has(> section:nth-child(2)) > section:nth-child(3) {
	padding-top: 10em;
}

